Desenhar coração e simbolo do batman

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <p> Aprendendo Canvas - HTML </p>
     </header>
-    <canvas>
+    <canvas id="arkhamCity">
     </canvas>
     <script src="canvas.js"></script>
 </body>
