--- a/canvas.html
+++ b/canvas.html
@@ -13,6 +13,6 @@
     </header>
     <canvas id="arkhamCity">
     </canvas>
-    <script src="canvas.js"></script>
+    <script src="js.js"></script>
 </body>
 </html>
